2010-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.Browser/BaseHttpWebRequestTest.cs: Split some test
	cases and add a new one for Proxy-Authorization

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Update these two tests
	  so they don't make me think that exceptions are being thrown
	  inside the SetBinding () path.

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest.cs:
	  Commit the test for the last ItemContainerGenerator fix.

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Add an extra test to
	  verify the mentor is used for FrameworkElements who have no
	  parent element and have a binding on their datacontext.

2010-07-07  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs:
	* System.Windows.Controls/ItemsControlTest.cs: Make sure empty
	  collections in ItemsSource result in a LayoutUpdated event
	  being raised. Fixes part of DRT 348 and the new moon-unit

2010-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Interop/SilverlightHostTest.cs: Add async test
	cases for NavigationState[Changed]

2010-07-06  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: Update the default values tests for
	  SL4.

2010-07-06  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Interop/SilverlightHostTest.cs: Add more test 
	cases for NavigationState[ChangedEventArgs] including cases where
	the event is not fired.

2010-07-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest.cs: If
	  the item has already been added to the ContainerItemMap we
	  shouldn't replace the existing one. This can happen if you
	  do something like: itemsControl.ItemsSource = new [] { 5, 5,
	  5, 5 }. Fixes PPC.ItemContainerGeneratorTest and a new
	  moon-unit.

2010-07-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
