@@ -1,3 +1,8 @@
+2010-07-09  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls/ContentControlTest.cs: Add a test
+	  for the last ManagedXamlLoader fix
+
 2010-07-08  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.Net.Browser/BaseHttpWebRequestTest.cs: Split some test
